# chat-bot-telegram

./: .env.dist  .gitignore  README.md  bot.py  pyproject.toml
.github/workflows/: test_and_lint.yml
tests/: conftest.py  pytest.ini  test_cat_api.py  test_convert.py  test_handlers.py  test_misc.py  test_weather.py
tgbot/: config.py  log_config.py
tgbot/handlers/: __init__.py  cat.py  convert.py  main.py  poll.py  user.py  weather.py
tgbot/keyboards/: inline.py
tgbot/middlewares/: throttling.py
tgbot/misc/: cute_cat.py  exchange_rates.py  states.py  weather.py
